# rinha-de-backend-2024-q1-FastAPI

./: LICENSE  Makefile  README.md  pyproject.toml
src/: main.py  models.py  operations.py  schemas.py
