[tool.poetry]
name = "rinha-de-backend-2024-q1-fastapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = "^2.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
